z-index topRow fixed

--- a/AVATI/AVATI/Shared/MainLayout.razor.css
+++ b/AVATI/AVATI/Shared/MainLayout.razor.css
@@ -8,7 +8,7 @@
     align-items: center;
     width: 100%;
     transition: 0.5s;
-    z-index: +1;
+    z-index: +4;
 }
 .sidebar {
     height: 100%;
